<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="seller"
            type="com.applemandi.android.data.model.Seller" />

        <variable
            name="viewModel"
            type="com.applemandi.android.viewModel.SellViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_color_red_light"
        tools:context=".view.fragment.SellerFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_produce_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/app_color_green"
            app:cardCornerRadius="8dp"
            app:contentPaddingBottom="24dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="24dp"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_village_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/village_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <Spinner
                    android:id="@+id/spinner"
                    villages="@{viewModel.villages}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/choose_village"
                    android:minHeight="48dp"
                    android:background="@drawable/bg_solid_white_round_rect"
                    android:spinnerMode="dropdown"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_village_name" />


                <TextView
                    android:id="@+id/tv_gross_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/gross_weight"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/spinner" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_gross_weight"
                    android:layout_width="0dp"
                    android:minHeight="48dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_solid_white_round_rect"
                    android:hint="@string/hint_gross_weight"
                    android:padding="8dp"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.onGrossWeightChange(text)}"
                    android:textColorHint="#999999"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_gross_weight" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_price_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/app_color_green"
            app:cardCornerRadius="8dp"
            app:contentPaddingBottom="24dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/cv_produce_detail">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_solid_white_round_rect"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_gross_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gross_price_text"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    grossPrice="@{viewModel.grossPrice}"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintLeft_toRightOf="@id/tv_gross_price"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/gross_price" />

                <TextView
                    android:id="@+id/tv_loyalty_index"
                    loyaltyIndex="@{seller.loyaltyIndex}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="#999999"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_gross_price"
                    tools:text="@string/applied_loyalty_index" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sell"
            buttonState="@{viewModel.grossPrice != 0.0}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_solid_green_round_rect"
            android:text="@string/sell_my_produce"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/cv_price_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>