<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.applemandi.android.viewModel.SellerViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_color_red_light">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_seller_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/app_color_green"
            app:cardCornerRadius="8dp"
            app:contentPaddingBottom="24dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".view.fragment.SellerFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_seller_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seller_name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_seller_name"
                    android:layout_width="0dp"
                    android:minHeight="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_solid_white_round_rect"
                    android:hint="@string/hint_seller_name"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:inputType="textPersonName"
                    android:text="@{viewModel.seller.name}"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.onSellerNameChange(text)}"
                    android:textColorHint="#999999"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_seller_name" />

                <TextView
                    android:id="@+id/tv_seller_lc_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/loyalty_card_identifier"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_seller_name" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_lc_id"
                    android:layout_width="0dp"
                    android:minHeight="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_solid_white_round_rect"
                    android:hint="@string/hint_loyalty_card_id"
                    android:padding="8dp"
                    android:maxLength="7"
                    android:inputType="text"
                    android:text="@{viewModel.seller.loyaltyCardId}"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.onLoyaltyCardIdChange(text)}"
                    android:textColorHint="#999999"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_seller_lc_id" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="10dp"
            android:text="@string/next"
            buttonState="@{viewModel.seller.name != null}"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/cv_seller_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


